# poker-cli

./: .env.example  .gitignore  AI_SECURITY_CLI_TODO.md  README.md  pyproject.toml
.aisec/: config.toml.example
docs/: COMMANDS.md  README.zh.md  redteam_endpoints.toml.example
poker/: __init__.py  cli.py  models.py  reporter.py  scanner.py  shell.py  state.py  workspace.py
poker/agent/: __init__.py  llm.py  prompts.py  runtime.py  tools.py
poker/capabilities/: __init__.py
poker/capabilities/audit/: __init__.py  _common.py  mcp.py  mcp_schema.py  prompt.py  rag.py  tools.py
poker/cli/: __init__.py  audit.py  config.py  init.py  redteam.py  repl.py  runtime.py  scan.py  trace.py
poker/config/: __init__.py  loader.py  models.py
poker/detectors/: __init__.py  agent_tools.py  prompts.py  secrets.py
poker/models/: __init__.py  finding.py
poker/ui/: __init__.py  confirm.py  diff.py  help.py  menu.py  panels.py  prompt.py  splash.py
poker_observer/: __init__.py  detectors.py  handler.py  otel.py  writer.py
tests/: __init__.py  test_agent_runtime.py  test_agent_tools.py  test_audit_mcp.py  test_audit_mcp_schema.py  test_audit_prompt.py  test_audit_rag.py  test_audit_tools.py  test_classifier.py  test_config.py  test_detectors.py  test_explain.py  test_investigate.py  test_multi_agent.py  test_observer.py  test_redteam.py  test_redteam_endpoints.py  test_redteam_executor.py  test_redteam_judge.py  test_repl.py  test_report.py  test_scanner.py  test_shell.py  test_state.py  test_threat_model.py  test_trace.py  test_triage.py
(+32 files in other folders)
